--- a/mkn.yaml
+++ b/mkn.yaml
@@ -14,7 +14,7 @@ profile:
       - name: mkn.kul
         version: master
       - name: parse.yaml
-        version: 0.5.5
+        version: stable
     main: cpp.cpp
     mode: static
 
