--- a/mkn.yaml
+++ b/mkn.yaml
@@ -5,7 +5,7 @@ version: master
 scm: https://github.com/dekken/maiken
 
 property:
-    DATE: 05-MAR-2017
+    DATE: 13-MAR-2017
     mkn.kul.profile: "@" # change to "c++0x" for < c++11
 
 parent: base
@@ -48,6 +48,19 @@ profile:
     parent: base
     mod:
       - name: mkn-mod.min
+    if_mod:
+        bsd:
+          - name: mkn-mod.exec
+            arg:
+                compile: echo HELLO BSD
+        nix:
+          - name: mkn-mod.exec
+            arg:
+                compile: echo HELLO *NIX
+        win:
+          - name: mkn-mod.exec
+            arg:
+                compile: cmd /c echo hello maiken! 
 
   - name: lib
     parent: base
