--- a/mkn.yaml
+++ b/mkn.yaml
@@ -1,12 +1,11 @@
-
+#! clean build -dtKOg 0
 
 name: mkn
 version: master
 scm: https://github.com/dekken/maiken
 
 property:
-    DATE: 02-NOV-2017
-    mkn.kul.profile: "@" # change to "c++0x" for < c++11
+    DATE: 04-NOV-2017
 
 parent: base
 mode: none
@@ -16,7 +15,6 @@ profile:
     inc: ./inc
     dep: 
       - name: mkn.kul
-        profile: ${mkn.kul.profile}
       - name: parse.yaml
     src: ./src
     main: cpp.cpp
@@ -36,7 +34,6 @@ profile:
     inc: ./inc
     dep: 
       - name: mkn.kul
-        profile: ${mkn.kul.profile}
       - name: parse.yaml
         profile: cmn
 
@@ -44,4 +41,3 @@ profile:
     parent: base
     if_arg:
         win_shared: -DKUL_SHARED -DKUL_EXPORT
-
