--- a/mkn.yaml
+++ b/mkn.yaml
@@ -14,13 +14,15 @@ profile:
   - name: base
     inc: ./inc
     dep: 
-      - name: mkn.kul
-      - name: parse.yaml
+    - name: mkn.kul
+    - name: parse.yaml
     src: ./src
     main: cpp.cpp
     arg: -D_MKN_VERSION_=${version}_${DATE}
     if_arg:
-        win_shared: -DYAML_CPP_DLL
+      win_shared: -DYAML_CPP_DLL
+    if_link:
+      win_cl: -nodefaultlib:libucrt.lib ucrt.lib
 
   - name: static
     parent: base
@@ -31,16 +33,17 @@ profile:
     mode: shared 
 
   - name: mod
+    mode: shared 
     inc: ./inc
     src: ./src
     dep: 
-      - name: mkn.kul
-      - name: parse.yaml
-        profile: shared
+    - name: mkn.kul
+    - name: parse.yaml
+      profile: shared
     if_arg:
-        win_shared: -DYAML_CPP_DLL -DKUL_SHARED -DKUL_EXPORT
+      win_shared: -DYAML_CPP_DLL -DKUL_SHARED -DKUL_EXPORT
 
   - name: lib
     parent: base
     if_arg:
-        win_shared: -DKUL_SHARED -DKUL_EXPORT
+      win_shared: -DKUL_SHARED -DKUL_EXPORT
