--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ language: cpp
 
 os:
   - osx
-  
+
 compiler:
   - clang
 
 script:
   - make bsd CXX=clang++
-  - ./mkn build -dtSa "-std=c++14" -l "-pthread -ldl" -WOg 0
+  - ./mkn build -dtSa "-std=c++14 -fPIC" -l "-pthread -ldl" -WOg 0
