--- a/mkn.yaml
+++ b/mkn.yaml
@@ -1,7 +1,7 @@
-#! clean build -dtKOg 0
+#! clean build -dtKOWg 0
 
 name: mkn
-version: master
+version: serv
 scm: https://github.com/dekken/maiken
 
 property:
@@ -48,6 +48,16 @@ profile:
     if_arg:
       win_shared: -DKUL_SHARED -DKUL_EXPORT
 
+  - name: server
+    parent: lib
+    dep:
+      - name: mkn.ram
+        profile: https
+      - name: io.cereal
+    arg: -D_MKN_WITH_MKN_RAM_ -D_MKN_WITH_IO_CEREAL_
+    main: server.cpp
+    mode: none
+
   - name: lint
     mod:
     - name: mkn-mod.exec
@@ -59,4 +69,4 @@ profile:
     - name: clang.format
       init:
         style: google
-        paths: inc src
+        paths: .
