--- a/mkn.yaml
+++ b/mkn.yaml
@@ -44,6 +44,10 @@ profile:
     if_arg:
       win_shared: -DYAML_CPP_DLL -DKUL_SHARED -DKUL_EXPORT
 
+  - name: all_options
+    with:
+      io.cereal mkn.ram[https]
+
   - name: lib
     parent: base
     if_arg:
