--- a/mkn.yaml
+++ b/mkn.yaml
@@ -5,7 +5,7 @@ version: master
 scm: https://github.com/dekken/maiken
 
 property:
-    DATE: 08-JUN-2018
+    DATE: 09-JUN-2018
 
 parent: base
 mode: none
@@ -13,7 +13,7 @@ mode: none
 profile:
   - name: base
     inc: ./inc
-    with: mkn.kul parse.yaml
+    dep: mkn.kul parse.yaml
     src: ./src
     main: mkn.cpp
     test: test/cpp.cpp test/py.py
