--- a/mkn.yaml
+++ b/mkn.yaml
@@ -1,10 +1,10 @@
-#! clean build -dtKOWg 0
+#! clean build -dtK -O 9 -W 9 -g 0
 
 name: mkn
 version: master
 
 property:
-    DATE: 28-SEP-2018
+    DATE: 09-OCT-2018
 
 parent: base
 mode: none
