--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,18 +27,26 @@ cache:
 
 build_script:
   - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
-  # - curl -o mkn.exe -L https://ci.appveyor.com/api/projects/dekken/maiken/artifacts/bin/build/mkn.exe
   - curl -o mkn.exe -L https://github.com/Dekken/maiken/raw/binaries/win10_x64/mkn.exe
-  - SET MKN_CL_PREFERRED=1
-
   # doesnt exist for somereason?
   - mkdir -p "C:\Program Files (x86)\Windows Kits\10\include\10.0.16299.0\cppwinrt"
-  - C:\Python36-x64\Scripts\pip install conan
+  - C:\Python36-x64\Scripts\pip install conan flawfinder
   - SET PYTHON=C:\Python36-x64\python.exe
-  - mkn clean build -dtKOg 0 -w mkn.ram[https]
-  - C:\Python36-x64\Scripts\pip install flawfinder
-  - C:\Python36-x64\python C:\Python36-x64\Scripts\flawfinder .
+  - bash -c "PATH=\"$PWD:/c/Python36-x64/:/c/Program Files/Git/usr/bin:$PATH\"; res/appveyor/run.sh"
 
 artifacts:
-  - path: "bin\\build\\mkn.exe"
-    name: mkn
+  - path: '*.tar'
+
+deploy:
+- provider: BinTray
+  username: dekken
+  api_key:
+    secure: FGDIE5oZsFn49kRhIK98X2JAqXwvReVl1nSlKNlo3pYCtosD2r9YfkHHhAJcjcyE
+  subject: dekken
+  repo: maiken
+  package: mkn
+  publish: true
+  override: true
+  explode: true
+  artifact: /.*\.tar/
+  version: master
