--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,37 @@
 
+git:
+  depth: 3
 matrix:
   include:
   - os: linux
-    dist: trusty
+    dist: bionic
     sudo: required
-    language: cpp
     compiler: gcc
     addons:
       apt:
         sources:
-          - ubuntu-toolchain-r-test
+        - sourceline: 'ppa:ubuntu-toolchain-r/test'
         packages:
           - g++-8
-      env:
-        - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
+    env:
+      - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
   - os: osx
     sudo: required
     osx_image: xcode11
-    language: cpp
     compiler: clang
 
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then eval "${MATRIX_EVAL}"; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3 7D2BAF1CF37B13E2069D6956105BD0E739499BDB; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then rvm get stable; fi
+  - |
+    if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+      gpg --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3 7D2BAF1CF37B13E2069D6956105BD0E739499BDB
+      rvm get stable
+    fi
+    [[ "$TRAVIS_OS_NAME" == "linux" ]] && eval "${MATRIX_EVAL}"
 script:
-  - export KUL_GIT_CO="--depth 3"
-  - export MKN_LIB_LINK_LIB=1
-  - export KLOG=3
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then source res/ci/osx_travis.sh; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then source res/ci/nix_travis.sh; fi
+  - |
+    export MKN_LIB_LINK_LIB="1" KUL_GIT_CO="--depth 3" KLOG="3" CC CXX
+    [[ "$TRAVIS_OS_NAME" == "osx" ]]   && ./res/ci/osx_travis.sh
+    [[ "$TRAVIS_OS_NAME" == "linux" ]] && ./res/ci/nix_travis.sh
 
 deploy:
   - provider: bintray
