--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ branches:
 max_jobs: 1
 
 image:
-- Visual Studio 2017
+- Visual Studio 2019
 
 init:
   - git config --global core.autocrlf input
@@ -26,13 +26,12 @@ cache:
   - C:\ProgramData\chocolatey\lib -> appveyor.yml
 
 build_script:
-  - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
+  - SET PATH=C:\Program Files\Git\usr\bin;%PATH%
+  - SET PYTHON=C:\Python36-x64\python.exe
   - curl -o mkn.exe -L https://github.com/Dekken/maiken/raw/binaries/win10_x64/mkn.exe
-  # doesnt exist for somereason?
-  - mkdir -p "C:\Program Files (x86)\Windows Kits\10\include\10.0.16299.0\cppwinrt"
   - C:\Python36-x64\python.exe -m pip install pip --upgrade
   - C:\Python36-x64\python.exe -m pip install conan flawfinder
-  - SET PYTHON=C:\Python36-x64\python.exe
+  - call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvars64.bat"
   - bash -c "PATH=\"$PWD:/c/Python36-x64/:/c/Program Files/Git/usr/bin:$PATH\"; res/ci/win_appveyor.sh"
 
 artifacts:
@@ -51,3 +50,5 @@ deploy:
   explode: true
   artifact: /.*\.tar/
   version: master
+
+
