--- a/mkn.yaml
+++ b/mkn.yaml
@@ -4,16 +4,17 @@ name: mkn
 scm: https://github.com/dekken/maiken
 version: master
 property:
-  DATE: 24-APR-2020
+  DATE: 01-MAY-2020
 
 parent: lib
 main: mkn.cpp
 mode: none
+src: src/maiken/create.cpp, -D_MKN_VERSION_=${version}_${DATE}
 test: test/cpp.cpp
 
 profile:
 - name: headers
-  inc: ./inc
+  inc: inc
   dep: mkn.kul
   if_arg:
     shared: -DKUL_SHARED -DKUL_EXPORT
@@ -21,7 +22,7 @@ profile:
 
 - name: lib
   parent: headers
-  src: ./src
+  src: src
   dep: parse.yaml
   if_link:
     nix: -ldl -pthread -rdynamic
@@ -46,8 +47,3 @@ profile:
 - name: format
   mod: |
     clang.format{init{style: file, paths: .}}
-# - name:
-#   init:
-
-    # types: cpp:cxx:cc:h:hpp
-
