--- a/.github/workflows/build_nix.yml
+++ b/.github/workflows/build_nix.yml
@@ -8,14 +8,14 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: make nix
-      run: make nix
-    - name: mkn
-      run: KLOG=3 ./mkn build -dtKOW 9 -g 0 -w mkn.ram[https] -a "-std=c++17 -fPIC"
+
+    - run: make nix
+
+    - run: KLOG=3 ./mkn build -dtKOW 9 -g 0 -w mkn.ram[https] -a "-std=c++17 -fPIC"
+
     - uses: actions/upload-artifact@v1
       with:
         name: mkn
