--- a/mkn.yaml
+++ b/mkn.yaml
@@ -12,7 +12,7 @@ mode: none
 profile:
 - name: headers
   inc: inc
-  dep: mkn.kul
+  dep: mkn.kul#${version}
   if_arg:
     shared: -DKUL_SHARED -DKUL_EXPORT
     win_shared: -DYAML_CPP_DLL
