--- a/.github/workflows/build_nix.yml
+++ b/.github/workflows/build_nix.yml
@@ -12,9 +12,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - uses: allenevans/set-env@v1.0.0
+      with:
+        KUL_GIT_CO: --depth 10 # is added to git clone calls
+
     - run: make nix
 
-    - run: KLOG=3 ./mkn build -dtKOW 9 -g 0 -w mkn.ram[https] -a "-std=c++17 -fPIC"
+    - run: KLOG=3 ./mkn build -dtKOW 9 -g 0 -a "-std=c++17 -fPIC"
 
     - uses: actions/upload-artifact@v1
       with:
