--- a/.github/workflows/build_win.yml
+++ b/.github/workflows/build_win.yml
@@ -15,6 +15,7 @@ jobs:
     - uses: allenevans/set-env@v1.0.0
       with:
         MKN_CL_PREFERRED: 1
+        KUL_GIT_CO: --depth 10
 
     - run: bash -c "rm /bin/link" # interferes with cl/link.exe
 
