--- a/.github/workflows/build_nix.yml
+++ b/.github/workflows/build_nix.yml
@@ -12,15 +12,13 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - uses: allenevans/set-env@v1.0.0
-      with:
-        KUL_GIT_CO: --depth 10 # is added to git clone calls
-
     - run: make nix
 
     - run: KLOG=3 ./mkn build -dtKa "-std=c++17 -fPIC" -O 2 -g 0 -W 9
 
     - uses: actions/upload-artifact@v1
+      env:
+        KUL_GIT_CO: --depth 10
       with:
         name: mkn
         path: bin/build/mkn
