--- a/.github/workflows/build_win.yml
+++ b/.github/workflows/build_win.yml
@@ -12,14 +12,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - uses: allenevans/set-env@v1.0.0
-      with:
-        MKN_CL_PREFERRED: 1
-        KUL_GIT_CO: --depth 10
-
     - run: bash -c "rm /bin/link" # interferes with cl/link.exe
 
     - shell: cmd
+      env:
+        MKN_CL_PREFERRED: 1
+        KUL_GIT_CO: --depth 10
       run: |
         call "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
         bash -c ./res/ci/win_build.sh
