--- a/.github/workflows/build_nix.yml
+++ b/.github/workflows/build_nix.yml
@@ -17,7 +17,10 @@ jobs:
     - env:
         MKN_GCC_PREFERRED: 1
         KUL_GIT_CO: --depth 1
-      run: KLOG=3 ./mkn build -dtKa "-std=c++17 -fPIC" -O 2 -g 0 -W 9
+      run: |
+        ldd mkn
+        KLOG=3 ./mkn build -dtKa "-std=c++17 -fPIC" -O 2 -g 0 -W 9
+        ldd bin/build/mkn
 
     - uses: actions/upload-artifact@v1
       with:
