--- a/.github/workflows/build_nix.yml
+++ b/.github/workflows/build_nix.yml
@@ -27,6 +27,8 @@ jobs:
       run: |
         ldd mkn
         KLOG=3 ./mkn build -dtKa "-std=c++17 -fPIC" -O 2 -g 0 -W 9
+        KLOG=3 ./mkn build -Op test_mod -a "-std=c++17 -fPIC" -O 2 -g 0 -W 9
+        KLOG=3 ./mkn build test pack -Op test -a "-std=c++17 -fPIC" -O 2 -g 0 -W 9
         ldd bin/build/mkn
 
     - uses: actions/upload-artifact@v1
