--- a/mkn.yaml
+++ b/mkn.yaml
@@ -1,10 +1,10 @@
 #! clean build test -dtKOW 9 -g 0 -q
 
 name: mkn
-scm: https://github.com/dekken/maiken
+# scm: https://github.com/mkn/mkn
 version: master
 property:
-  DATE: 09-FEB-2022
+  DATE: 15-MAY-2022
 
 parent: bin
 mode: none
