--- a/.github/workflows/build_many_linux.yml
+++ b/.github/workflows/build_many_linux.yml
@@ -1,4 +1,5 @@
-name: ubuntu-latest
+
+name: many-linux
 
 on:
   pull_request:
@@ -7,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: quay.io/pypa/manylinux2014_x86_64
     steps:
     - uses: actions/checkout@v3
 
