--- a/.github/workflows/build_many_linux.yml
+++ b/.github/workflows/build_many_linux.yml
@@ -1,5 +1,8 @@
-
 name: many-linux
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
 
 on:
   pull_request:
