--- a/.github/workflows/build_win.yml
+++ b/.github/workflows/build_win.yml
@@ -1,5 +1,9 @@
 name: windows-latest
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 on:
   pull_request:
     branches: [ master ]
@@ -22,7 +26,7 @@ jobs:
         KUL_GIT_CO: --depth 1
       run: |
         bash -c ./res/ci/win_build.sh
-        mkn build -dtKOg 0 -a "-std:c++17 -EHsc"
+        mkn build -dtKO 2 -g 0 -a "-std:c++17 -EHsc"
         mkn build -dtOp test_mod -a "-std:c++17 -EHsc"
         mkn build test pack -Op test -a "-std:c++17 -EHsc"
 
